force-app/main/default/objects/ccrz__L_Exception__c/ccrz__L_Exception__c.object-meta.xml
<CustomObject>
    <description>This custom object stores the technical exceptions created by the source application</description>
    <label>L_Exception</label>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L_Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>