force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <description>Defines the exception category. &quot;Business&quot; and &quot;Technical&quot; are the current defined categories.</description>
    <label>Category</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>