force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__DMLFieldNames__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DMLFieldNames__c</fullName>
    <label>DMLFieldNames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>