force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Exception_Originator__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Exception_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who created the exception</description>
    <label>Exception Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>G2WExceptions</relationshipName>
    <type>Lookup</type>
</CustomField>