force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Function_Point__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Function_Point__c</fullName>
    <description>Describes the function point in the code that caused the exception</description>
    <label>Function Point</label>
    <length>64</length>
    <type>Text</type>
</CustomField>