force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Line_Number__c</fullName>
    <description>Stores the line number where the exception occurred</description>
    <label>Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>