force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Message__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Message__c</fullName>
    <description>Stores the complete stack trace of the exception.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>