force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__NotifyEmail__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NotifyEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to indicate whether the exception needs to be notified by email with details</description>
    <label>NotifyEmail</label>
    <type>Checkbox</type>
</CustomField>