force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__OrgId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrgId__c</fullName>
    <description>Store the orgId of the org generating the error</description>
    <label>OrgId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>