force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Page_Severity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Page_Severity__c</fullName>
    <description>List the page severity of the apex message to be displayed to the end user.</description>
    <label>Page Severity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>