force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Profile_Name__c</fullName>
    <description>Stores the profile name associated with the exception originator</description>
    <label>Profile Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>