force-app/main/default/objects/ccrz__L_Exception__c/fields/ccrz__User_Friendly_Message__c.field-meta.xml
<CustomField>
    <fullName>ccrz__User_Friendly_Message__c</fullName>
    <description>If the exception needs to be propagated to the UI, what is the message to be displayed to the end user.</description>
    <label>User Friendly Message</label>
    <type>TextArea</type>
</CustomField>