force-app/main/default/objects/ccrz__L_Exception__c/validationRules/ccrz__Exception_Message_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ccrz__Exception_Message_Required</fullName>
    <active>true</active>
    <description>The exception message with details is required</description>
    <errorConditionFormula>OR(
       ISBLANK( ccrz__Message__c ) 
    , ISNULL(ccrz__Message__c )
)</errorConditionFormula>
    <errorDisplayField>ccrz__Message__c</errorDisplayField>
    <errorMessage>Exception Message is required.</errorMessage>
</ValidationRule>