force-app/main/default/objects/ccrz__L_Exception__c/validationRules/ccrz__PageSeverityReq_UserMessage.validationRule-meta.xml
<ValidationRule>
    <fullName>ccrz__PageSeverityReq_UserMessage</fullName>
    <active>true</active>
    <description>Page severity needs to be defined for every user message</description>
    <errorConditionFormula>AND (
    ccrz__Show_EndUser__c 
 ,  OR
          (  ISBLANK(ccrz__Page_Severity__c)
            , ISNULL(ccrz__Page_Severity__c)
          )
)</errorConditionFormula>
    <errorDisplayField>ccrz__Page_Severity__c</errorDisplayField>
    <errorMessage>Page Severity is required when show end user flag is set</errorMessage>
</ValidationRule>